Added endpoint to get all establishments also establishments entity New function in CRUD DB for getting all documents out of a collection Temporary bypass of user Auth with Admin JWT
